Bug 504785 - Misleading message during file delete when size of the "Trash" exceeds limit
Summary: Misleading message during file delete when size of the "Trash" exceeds limit
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: Trash (other bugs)
Version First Reported In: 6.13.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-05-25 21:32 UTC by Yevhen Popok
Modified: 2025-06-06 17:38 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.16
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yevhen Popok 2025-05-25 21:32:43 UTC
SUMMARY
Deletion of the 1 Byte file may trigger dialog window with the message "Moving this item to Trash failed as it is too large." This happens when the "Trash" directory size exceeds specified limit.

STEPS TO REPRODUCE
1. Open "Dolphin" file manager
2. Open "Configure Dolphin" > "Trash" and see current Trash size limit (e.g., 10% that = 92.99GiB)
2. Increase Trash size limit slighly (e.g., 11% / 102.29GiB)
3. Create file larger than the initial Trash limit (e.g.,  fallocate -l 100G 100G) and delete it
4. Return the initial Trash size limit (10%)
5. Create empty file with the size 1 Byte (echo "" > 1B) and try to delete it

OBSERVED RESULT
 Window with the title "Delete Permanently — Dolphin" and the message "Moving this item to Trash failed as it is too large. Permanently delete it instead?" appears and waits for the user action

EXPECTED RESULT
Message in the window informs that the Trash is full and can't accept new files

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora 42
KDE Plasma Version:  6.3.5
KDE Frameworks Version: 6.14.0
Qt Version: 6.9.0
Comment 1 Yevhen Popok 2025-05-25 22:03:15 UTC
I found an older bug https://bugs.kde.org/show_bug.cgi?id=469598 (Plasma 5.27.5, Framework 5.105.0). On the related video (https://youtu.be/LXIqVJu61v4) we can see an error message "The trash is full. Empty it or remove items manually." Nowadays, I can't trigger this dialog.
Comment 2 Bug Janitor Service 2025-05-27 22:12:58 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kio/-/merge_requests/1903
Comment 3 Nate Graham 2025-06-06 17:38:41 UTC
Git commit af989a7afde20f180f5c0a61d17e7e974147bf1c by Nate Graham.
Committed on 06/06/2025 at 17:25.
Pushed by ngraham into branch 'master'.

Rephrase misleading "full trash" message

Right now when the trash is full, it tells you the file you're trying to
put into it is too big, even if it's a really tiny file. This feels odd.
Instead, report that the trash is too full to accept it.
FIXED-IN: 6.16

M  +3    -3    src/widgets/widgetsaskuseractionhandler.cpp

https://invent.kde.org/frameworks/kio/-/commit/af989a7afde20f180f5c0a61d17e7e974147bf1c