Rephrase misleading "full trash" message

Right now when the trash is full, it tells you the file you're trying to
put into it is too big, even if it's a really tiny file. This feels odd.
Instead, report that the trash is too full to accept it.

BUG: 504785
FIXED-IN: 6.16